<resources>
    <string name="app_name">Bengali Word Quiz</string>

    <string name="home_menu_bookmark_words">Bookmarked Words</string>
    <string name="home_menu_choose_theme">Choose Theme</string>

    <string name="title_bookmarked_words">Bookmarked Words</string>


    <!-- Home Fragment -->
    <string name="home_english_to_bengali">English To Bengali</string>
    <string name="home_bengali_to_english">Bengali To English</string>

    <string name="home_title_line1">Hi,</string>
    <string name="home_title_line2">Let\'s Play Word Quiz</string>

    <string name="home_chip_options_label">How many options per word?</string>
    <string name="home_chip_words_label">How many words do you want?</string>

    <string name="home_chip_word_count_10" translatable="false">10</string>
    <string name="home_chip_word_count_20" translatable="false">20</string>
    <string name="home_chip_word_count_30" translatable="false">30</string>
    <string name="home_chip_word_count_50" translatable="false">50</string>
    <string name="home_chip_word_count_40" translatable="false">40</string>

    <string name="home_chip_option_count_2" translatable="false">2</string>
    <string name="home_chip_option_count_4" translatable="false">4</string>
    <string name="home_chip_option_count_6" translatable="false">6</string>

    <!-- Quiz Fragment-->
    <string name="quiz_toolbar_title">Word %1$d/%2$d</string>

    <!-- App Widget -->
    <string name="widget_bookmarked_words_title">Bookmarked Words</string>


</resources>
